; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_os_win32.c_mch_get_user_name.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_os_win32.c_mch_get_user_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OK = common dso_local global i32 0, align 4
@NUL = common dso_local global i32 0, align 4
@FAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mch_get_user_name(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca [257 x i8], align 16
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 257, i32* %7, align 4
  %8 = getelementptr inbounds [257 x i8], [257 x i8]* %6, i64 0, i64 0
  %9 = call i64 @GetUserName(i8* %8, i32* %7)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = getelementptr inbounds [257 x i8], [257 x i8]* %6, i64 0, i64 0
  %14 = load i32, i32* %5, align 4
  %15 = sub nsw i32 %14, 1
  %16 = call i32 @vim_strncpy(i32* %12, i8* %13, i32 %15)
  %17 = load i32, i32* @OK, align 4
  store i32 %17, i32* %3, align 4
  br label %23

18:                                               ; preds = %2
  %19 = load i32, i32* @NUL, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  store i32 %19, i32* %21, align 4
  %22 = load i32, i32* @FAIL, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %18, %11
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i64 @GetUserName(i8*, i32*) #1

declare dso_local i32 @vim_strncpy(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
